--- a/GroceryGame/Base.lproj/Main.storyboard
+++ b/GroceryGame/Base.lproj/Main.storyboard
@@ -144,8 +144,6 @@
         <!--New Grocery List-->
         <scene sceneID="hQ5-l9-afs">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="xB9-tn-1It" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="1Pg-Pw-Uzm" userLabel="Exit" sceneMemberID="exit"/>
                 <viewController id="hWc-1X-TlE" customClass="AddListViewController" customModule="GroceryGame" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="SwO-Z6-fgm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -239,6 +237,9 @@
                                                 <state key="normal" title="Add Item"/>
                                                 <connections>
                                                     <action selector="addItem:" destination="hWc-1X-TlE" eventType="touchUpInside" id="eyg-pT-0xU"/>
+                                                    <segue destination="WgW-5f-iko" kind="popoverPresentation" identifier="popAdd" popoverAnchorView="MQq-xN-giD" id="lpM-7t-45d">
+                                                        <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES"/>
+                                                    </segue>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="acP-7X-jTm">
@@ -284,8 +285,109 @@
                         <outlet property="tableView" destination="4V9-jZ-cp0" id="2Vs-rd-qkR"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xB9-tn-1It" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="1Pg-Pw-Uzm" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="3501.5999999999999" y="993.55322338830592"/>
+        </scene>
+        <!--Add List View Controller-->
+        <scene sceneID="ff5-bv-IDK">
+            <objects>
+                <viewController id="WgW-5f-iko" customClass="AddListViewController" customModule="GroceryGame" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dYX-JN-mcQ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="3BW-b4-Gfz">
+                                <rect key="frame" x="16" y="80" width="343" height="69"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter item name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Swe-2S-eU5">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="0a3-X9-Viu">
+                                        <rect key="frame" x="0.0" y="40" width="343" height="29"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quantity: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FCg-QY-6lY">
+                                                <rect key="frame" x="0.0" y="0.0" width="74.5" height="29"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="0" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9nc-dn-uEf">
+                                                <rect key="frame" x="82.5" y="0.0" width="158.5" height="29"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="Jsj-7N-iPa">
+                                                <rect key="frame" x="249" y="0.0" width="94" height="29"/>
+                                                <connections>
+                                                    <action selector="stepperChanged:" destination="WgW-5f-iko" eventType="valueChanged" id="Adu-VQ-Geh"/>
+                                                </connections>
+                                            </stepper>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GzQ-u2-MhW">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="New Item" id="6Dw-xH-Ju3"/>
+                                </items>
+                            </navigationBar>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="722-03-Q4P">
+                                <rect key="frame" x="16" y="606" width="343" height="45"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U3P-fO-3Cp">
+                                        <rect key="frame" x="0.0" y="0.0" width="70" height="45"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="ttO-ZM-aEh"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                        <state key="normal" title="Cancel"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FTh-dT-60y">
+                                        <rect key="frame" x="293" y="0.0" width="50" height="45"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="OF0-3d-SML"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="Rve-Xe-2TN"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                        <state key="normal" title="Add">
+                                            <color key="titleColor" red="0.0" green="0.47617390640000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="FTh-dT-60y" firstAttribute="height" secondItem="U3P-fO-3Cp" secondAttribute="height" id="enN-IJ-UUw"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="0.08764304577464789" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="722-03-Q4P" firstAttribute="leading" secondItem="I3V-ec-70J" secondAttribute="leading" constant="16" id="D4X-Xa-eBO"/>
+                            <constraint firstItem="GzQ-u2-MhW" firstAttribute="trailing" secondItem="I3V-ec-70J" secondAttribute="trailing" id="Jy2-oJ-iki"/>
+                            <constraint firstItem="I3V-ec-70J" firstAttribute="trailing" secondItem="722-03-Q4P" secondAttribute="trailing" constant="16" id="Yoi-cA-yO8"/>
+                            <constraint firstItem="3BW-b4-Gfz" firstAttribute="leading" secondItem="I3V-ec-70J" secondAttribute="leading" constant="16" id="bLu-We-dm5"/>
+                            <constraint firstItem="GzQ-u2-MhW" firstAttribute="leading" secondItem="I3V-ec-70J" secondAttribute="leading" id="eNK-Jc-0yd"/>
+                            <constraint firstItem="I3V-ec-70J" firstAttribute="bottom" secondItem="722-03-Q4P" secondAttribute="bottom" constant="16" id="eiT-sE-eS8"/>
+                            <constraint firstItem="I3V-ec-70J" firstAttribute="trailing" secondItem="3BW-b4-Gfz" secondAttribute="trailing" constant="16" id="eyd-x4-N3s"/>
+                            <constraint firstItem="GzQ-u2-MhW" firstAttribute="top" secondItem="I3V-ec-70J" secondAttribute="top" id="h14-78-Xmt"/>
+                            <constraint firstItem="3BW-b4-Gfz" firstAttribute="top" secondItem="GzQ-u2-MhW" secondAttribute="bottom" constant="16" id="mn6-oC-8s3"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="I3V-ec-70J"/>
+                    </view>
+                    <connections>
+                        <outlet property="quantityStepper" destination="Jsj-7N-iPa" id="mhu-t9-vBQ"/>
+                        <outlet property="quantityTextField" destination="9nc-dn-uEf" id="12X-0n-bfx"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="G2b-vq-lRT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4365.6000000000004" y="993.55322338830592"/>
         </scene>
         <!--Home Navigation Controller-->
         <scene sceneID="kY1-Cx-D3Q">
