added the new storyboard

--- a/GroceryGame/Base.lproj/Main.storyboard
+++ b/GroceryGame/Base.lproj/Main.storyboard
@@ -33,6 +33,9 @@
                                         <state key="normal" title="Play">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="playSelected:" destination="BYZ-38-t0r" eventType="touchUpInside" id="P1A-VG-6Jf"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OQy-Kk-RHt">
                                         <rect key="frame" x="192.5" y="0.0" width="122.5" height="48"/>
@@ -97,11 +100,11 @@
                                                         <constraint firstAttribute="width" secondItem="X3S-Zh-hRn" secondAttribute="height" multiplier="1:1" id="14z-bg-47e"/>
                                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="33.5" id="cFa-wH-q22"/>
                                                     </constraints>
-                                                    <state key="normal" title="Edit Icon" image="editIcon"/>
+                                                    <state key="normal" title="Edit Icon" image="EditIcon"/>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vMj-sR-KnZ">
                                                     <rect key="frame" x="41.5" y="0.0" width="33.5" height="33.5"/>
-                                                    <state key="normal" title="Delete Icon" image="trashcan"/>
+                                                    <state key="normal" title="Delete Icon" image="milkCarton"/>
                                                 </button>
                                             </subviews>
                                         </stackView>
@@ -445,11 +448,11 @@
         </scene>
     </scenes>
     <resources>
-        <image name="editIcon" width="428" height="414"/>
+        <image name="EditIcon" width="428" height="414"/>
         <image name="groceryStore" width="640" height="828"/>
-        <image name="trashcan" width="344" height="367"/>
+        <image name="milkCarton" width="329" height="399"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="WQs-7h-8rW"/>
+        <segue reference="Fgb-nt-EcQ"/>
     </inferredMetricsTieBreakers>
 </document>
